# autoprobing

./: .gitignore  README.md  TASK.md  evaluate_probe.py  extract_activations.py  main.py  pyproject.toml  requirements.txt  task.md  train_probe.py
configs/: cadenza.yaml  mistral.yaml
data/: __init__.py  liars_bench.py  mask.csv  repe.py
probes/: __init__.py  base.py  logistic_regression.py  mass_mean_shift.py
tests/: test_integration.py  test_probes.py
